--- a/Feel/Resources/ResourceLanguage.it.resx
+++ b/Feel/Resources/ResourceLanguage.it.resx
@@ -117,7 +117,88 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Test" xml:space="preserve">
-    <value>Risparmiare 100 euro</value>
+  <data name="Alimentazione" xml:space="preserve">
+    <value>Alimentazione</value>
+  </data>
+  <data name="Animali" xml:space="preserve">
+    <value>Animali</value>
+  </data>
+  <data name="Arte" xml:space="preserve">
+    <value>Arte</value>
+  </data>
+  <data name="Auto" xml:space="preserve">
+    <value>Auto</value>
+  </data>
+  <data name="Bellezza" xml:space="preserve">
+    <value>Bellezza</value>
+  </data>
+  <data name="Benessere" xml:space="preserve">
+    <value>Benessere</value>
+  </data>
+  <data name="Casa" xml:space="preserve">
+    <value>Casa</value>
+  </data>
+  <data name="Cultura" xml:space="preserve">
+    <value>Cultura</value>
+  </data>
+  <data name="Educazione" xml:space="preserve">
+    <value>Educazione</value>
+  </data>
+  <data name="Eventi" xml:space="preserve">
+    <value>Eventi</value>
+  </data>
+  <data name="Famiglia" xml:space="preserve">
+    <value>Famiglia</value>
+  </data>
+  <data name="InserisciCategoria" xml:space="preserve">
+    <value>Inserisci una categoria</value>
+  </data>
+  <data name="InserisciData" xml:space="preserve">
+    <value>Inserisci una data di scadenza</value>
+  </data>
+  <data name="InserisciTitolo" xml:space="preserve">
+    <value>Inserisci un titolo</value>
+  </data>
+  <data name="Lavoro" xml:space="preserve">
+    <value>Lavoro</value>
+  </data>
+  <data name="MassimoVentiCaratteri" xml:space="preserve">
+    <value>Massimo 20 caratteri</value>
+  </data>
+  <data name="Moda" xml:space="preserve">
+    <value>Moda</value>
+  </data>
+  <data name="Musica" xml:space="preserve">
+    <value>Musica</value>
+  </data>
+  <data name="Natura" xml:space="preserve">
+    <value>Natura</value>
+  </data>
+  <data name="Politica" xml:space="preserve">
+    <value>Politica</value>
+  </data>
+  <data name="Religione" xml:space="preserve">
+    <value>Religione</value>
+  </data>
+  <data name="Risparmio" xml:space="preserve">
+    <value>Risparmio</value>
+  </data>
+  <data name="Salute" xml:space="preserve">
+    <value>Salute</value>
+  </data>
+  <data name="Scadenza" xml:space="preserve">
+    <value>Scadenza</value>
+  </data>
+  <data name="Sport" xml:space="preserve">
+    <value>Sport</value>
+  </data>
+  <data name="Tecnologia" xml:space="preserve">
+    <value>Tecnologia</value>
+  </data>
+  <data name="TempoLibero" xml:space="preserve">
+    <value>Tempo libero</value>
+  </data>
+  <data name="Viaggi" xml:space="preserve">
+    <value>Viaggi</value>
   </data>
 </root>
