--- a/Feel/Resources/ResourceLanguage.it.resx
+++ b/Feel/Resources/ResourceLanguage.it.resx
@@ -165,6 +165,18 @@
   <data name="MassimoVentiCaratteri" xml:space="preserve">
     <value>Massimo 20 caratteri</value>
   </data>
+  <data name="MessaggioAssistenteAbout" xml:space="preserve">
+    <value>Informazioni sull'app</value>
+  </data>
+  <data name="MessaggioAssistenteAggiuntaObiettivo" xml:space="preserve">
+    <value>Aggiungi un obiettivo</value>
+  </data>
+  <data name="MessaggioAssistenteAreaUtente" xml:space="preserve">
+    <value>Area utente</value>
+  </data>
+  <data name="MessaggioAssistenteCambiaTema" xml:space="preserve">
+    <value>Cambia il tema</value>
+  </data>
   <data name="Moda" xml:space="preserve">
     <value>Moda</value>
   </data>
