--- a/Feel/Resources/ResourceLanguage.resx
+++ b/Feel/Resources/ResourceLanguage.resx
@@ -309,4 +309,13 @@
   <data name="Filtra" xml:space="preserve">
     <value>Filtra</value>
   </data>
+  <data name="Completati" xml:space="preserve">
+    <value>Completati</value>
+  </data>
+  <data name="NonCompletati" xml:space="preserve">
+    <value>Non completati</value>
+  </data>
+  <data name="Stato" xml:space="preserve">
+    <value>Stato</value>
+  </data>
 </root>
