--- a/Feel/Resources/ResourceLanguage.en.resx
+++ b/Feel/Resources/ResourceLanguage.en.resx
@@ -318,4 +318,10 @@
   <data name="Stato" xml:space="preserve">
     <value>State</value>
   </data>
+  <data name="MostraFiltri" xml:space="preserve">
+    <value>Show filter</value>
+  </data>
+  <data name="NascondiFiltri" xml:space="preserve">
+    <value>Hide filters</value>
+  </data>
 </root>
