--- a/Feel/Resources/ResourceLanguage.en.resx
+++ b/Feel/Resources/ResourceLanguage.en.resx
@@ -244,10 +244,10 @@
     <value>Periodic check</value>
   </data>
   <data name="InfoTarget" xml:space="preserve">
-    <value>Define a numerical value that you want to reach based on the goal you set. For example, if you want to save 1,000 euros, the Target you will have to write will be 1,000, and when you reach it, the goal will be classified as Completed. If instead you want to run 10km every day for a week, set your Target to 7 and check Periodic Check, so as to automatically add a +1 every time you perform a check.</value>
+    <value>Define a numerical value that you want to reach based on the goal you set. For example, if you want to save 1,000 euros, the &lt;b&gt;Target&lt;/b&gt; you will have to write will be 1,000, and when you reach it, the goal will be classified as &lt;b&gt;Completed&lt;/b&gt;. If instead you want to run 10km every day for a week, set your &lt;b&gt;Target&lt;/b&gt; to 7 and check &lt;b&gt;Periodic Check&lt;/b&gt;, so as to automatically add a +1 every time you perform a check.</value>
   </data>
   <data name="InfoCheck" xml:space="preserve">
-    <value>Determine whether this goal will be updated through periodic checks. For example, if your goal is to read 10 books, set your Target to 10 and check Periodic Check so that you perform a +1 with each check.</value>
+    <value>Determine whether this goal will be updated through periodic checks. For example, if your goal is to read 10 books, set your &lt;b&gt;Target&lt;/b&gt; to 10 and check &lt;b&gt;Periodic Check&lt;/b&gt; so that you perform a +1 with each check.</value>
   </data>
   <data name="Chiudi" xml:space="preserve">
     <value>Close</value>
