--- a/Feel/Resources/ResourceLanguage.en.resx
+++ b/Feel/Resources/ResourceLanguage.en.resx
@@ -366,4 +366,13 @@
   <data name="LinguaSelezionata" xml:space="preserve">
     <value>Language selected: &lt;b class="text-success"&gt;English&lt;/b&gt;</value>
   </data>
+  <data name="Elimina" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+  <data name="TestoDeleteObiettivo" xml:space="preserve">
+    <value>Do you want to delete this goal?</value>
+  </data>
+  <data name="EliminaObiettivi" xml:space="preserve">
+    <value>Delete goals</value>
+  </data>
 </root>
